# dif-arc

./: .gitignore  README.md  dataset.py  debug_train.ipynb  debug_train.py  evaluate.py  model.py  paper_dataset.ipynb  pyproject.toml  scratch.ipynb  tpu_setup.sh  train.py  utils.py
arc_viewer/: __init__.py  __main__.py  loaders.py  server.py
arc_viewer/static/: app.js  index.html  style.css
configs/: baseline.py  debug.py  vision.py  vision_debug.py
datasets/: dataset.py  dataset_v2.py  torch_dataset.py
modelling/: layers.py  model.py  optimizers.py  vision_model.py
scratch/: buil_arc.ipynb
scripts/: build_arc_dataset.py  build_arc_dataset_v2.py
