[project]
name = "arc-diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chz>=0.3.0",
    "flax>=0.12.0",
    "grain>=0.2.13",
    "ipykernel>=7.0.1",
    "numpy>=2.3.4",
    "optax>=0.2.6",
]

[project.optional-dependencies]
cpu = ["jax>=0.7.0"]
gpu = ["jax[cuda12]>=0.7.0"]
tpu = ["jax[tpu]>=0.7.0"]
